# pico_sdk_workspace

./: .gitignore  README.md  pico notes.docx
pico_freertos_scripts/: CMakeLists.txt
pico_freertos_scripts/include/: FreeRTOSConfig.h
pico_freertos_scripts/src/: 01_blinky_task.c  02_simple_task.c  03_task_queue.c  04_task_priorities.c  05_mutex.c  06_semaphore.c  07_smp_blink.c  08_smp_core_selection.c
pico_scripts/001_blink/: main.c
pico_scripts/002_usb_print/: CMakeLists.txt  hello.c  usb_serial_input.c
pico_scripts/003_gpio_input/: CmakeLists.txt  main.c
pico_scripts/004_gpio_irq/: main.c
pico_scripts/005_rotatory_encoder/: 01_basic.c  02_irq.c  CMakeLists.txt
pico_scripts/006_pwm/: 01_servo.c  02_servo.c  CmakeLists.txt
pico_scripts/007_multicore/: CMakeLists.txt  basic_multicore.c
pico_scripts/008_i2c/: ds1307_rtc_i2c_0.c
pico_scripts/008_i2c/16x2_i2c_lcd/: CmakeLists.txt  main.c
pico_scripts/008_i2c/i2c_scan/: i2c_scan02.c
pico_scripts/008_i2c/ssd1306_oled/: ssd1306_notes.txt
pico_scripts/008_i2c/ssd1306_oled/lib/: ssd1306.h
pico_scripts/009_spi/bmp280_spi/: CMakeLists.txt  bmp280_spi_00.c  bmp280_spi_01.c
pico_scripts/009_spi/ssd1306_oled_spi/: 01_hello_spi.c  CMakeLists.txt
pico_scripts/00_i2c/: CMakeLists.txt  bmp280_i2c.c  bno005_imu.c  ds1307_rtc_i2c_1.c  mpu6050_i2c.c
pico_scripts/00_i2c/16x2_i2c_lcd/: lcd_i2c.c  lcd_i2c.h
pico_scripts/00_i2c/i2c_scan/: CMakeLists.txt  i2c_scan.c
pico_scripts/00_i2c/ssd1306_oled/: Animated_example.c  CMakeLists.txt  main.c
pico_scripts/010_pir_sensor/: CMakeLists.txt  irq.c  simple.c
pico_scripts/011_DS18B20_temperature_sensor/: CMakeLists.txt  main.c
pico_scripts/Digital_clock/: CMakeLists.txt
pico_scripts/Digital_clock/inc/: buzzer.h  ds1307_rtc.h
pico_scripts/Digital_clock/src/: buzzer.c  ds1307_rtc.c  main.c  ssd1306.c
